# modern-cpp-practice

./: .clang-tidy  .clang-tidy-ignore  .clang-uml  .clangd  .gitignore  CMakeLists.txt  README.org  launch.json
all/: CMakeLists.txt
cmake/: CPM.cmake
src/: CMakeLists.txt  example_runner.cpp  main.cpp  main_test.cpp
src/bk_lrn_cpp_by_exmpl/: CMakeLists.txt  example_runner.cpp  example_runner.hpp
src/bk_lrncppbyex/: CMakeLists.txt  bk_lrncppbyex_provider.cpp  pascles_triangle.cpp  pascles_triangle.hpp
src/include/: app_defs.hpp  bk_lrncppbyex_provider.hpp  cli_io.hpp  example.hpp  example_runner.hpp  examples_provider.hpp
src/utils/: CMakeLists.txt  cli_io.cpp
